Allow Java 9+ profile for all modules